# gammapy-tools

./: .cz.toml  .dockerignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile_back  README.md  apptainer_build.sh  apptainer_hub.sh  developer_guide.me  docker-compose.yml  docker_build.sh  gammapy-tools.def  kernel.json  launch_jupyter.sh  launch_kernel_apptainer.sh  launch_kernel_docker.sh  mkdocs.yml  pyproject.toml  requirements.txt  singularity.def  singularity_hub.sh
.github/workflows/: bump_version.yml
background_from_bkg/fake_source_coordinates/: fake_location.py
background_from_bkg/makeBackground/: __init__.py  backgroundTools.py  makeBackground.py  prepareData.py  toy_analysis.py
background_from_bkg/make_background/: BackgroundModelEstimator.py  __init__.py  background_tools.py  make_background.py  prepare_data.py
docs/: README.md  backgrounds.md  config.md  containers.md  developer_guide.md  exclusion_regions.md  index.md  mimicing_data.md  reference.md
examples/: 3d_config.yaml  RBM_analysis.ipynb  RBM_analysis_LL.ipynb  README.md  analysis_notebook.ipynb  crab07.yaml  crab1.yaml  example_config.yaml  low_level.ipynb  make_bkg_lookup_table.ipynb  mimic_data.ipynb  mrk_501_v4.yaml  mrk_501_v5.yaml  point-like.ipynb  prepare_dataset.ipynb  segue.yaml
examples/LS5039/: 3DAnalysis.ipynb  PrepAnalysis.ipynb  RBM_Analysis.ipynb  README.md  Spectrum_HESS.ipynb  Spectrum_LS5039.ipynb  config_LS5039.yaml
gammapy_tools/: __init__.py  __version__.py  _version.py
gammapy_tools/analysis/: __init__.py  data_products.py  data_products.py.orig  data_products_BASE_4133860.py  data_products_LOCAL_4133777.py  make_attach_bkg.py  rbm.py  time_cuts.py  validation_analysis.py
gammapy_tools/fake_source_coordinates/: __init__.py  fake_location.py  process.py
gammapy_tools/make_background/: __init__.py  background_models.py  background_tools.py  make_background.py  prepare_data.py  toy_analysis.py
gammapy_tools/templates/: __init__.py  config.py
gammapy_tools/utils/: __init__.py  exclusion_finder.py  run_details.py  run_details.py.orig  stats.py
