[build-system]
requires = ["setuptools", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages=[
    "gammapy_tools", 
    "gammapy_tools.make_background", 
    "gammapy_tools.fake_source_coordinates", 
    "gammapy_tools.templates",
    "gammapy_tools.analysis",
    "gammapy_tools.utils",
    ]

[tool.setuptools_scm]
write_to = "gammapy_tools/__version__.py"

[project]
name = "gammapy_tools"
dynamic = ["version"]
description = "Tools for gammapy analysis for the VERITAS telescope"
readme = "README.md"
license = { file="LICENSE" }

requires-python = ">=3.9"


dependencies = [
    "gammapy>=1.3",
    "pydantic",
    "scipy",
    "astropy",
    "astroquery",
    "matplotlib",
    "multiprocess",
    "numpy",
    #"pyV2DL3",
    "PyYAML",
    "regions",
    "tqdm",
]

[project.optional-dependencies]
"tests" = [
    "pytest",
    "pytest-cov",
]

[project.urls]
#"documentation" = "https://github.com/VERITAS-Observatory/gammapy-tools/"
#"repository" = "https://github.com/VERITAS-Observatory/gammapy-tools/"
#"bug tracker" = "https://github.com/VERITAS-Observatory/gammapy-tools/issues"

[project.scripts]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "scm"
update_changelog_on_bump = true
changelog_incremental = true
version_files = [
    "gammapy_tools/__version__.py",
    "pyproject.toml:version"
]
